--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,7 @@
 
 :root {
   --color-bg: #f3f5f9;
+  --color-dark: #000000;
   --color-dark-bg: #1f2937;
   --color-border: #1f2937;
   --color-light-gray: #adaebc;
@@ -26,7 +27,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background: var(--color-white);
+  background: linear-gradient(90deg, #000000 0%, #111827 100%);
 }
 
 .container {
