FEAT: intro component added and others

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,9 +10,12 @@
   --color-bg: #f3f5f9;
   --color-dark: #000000;
   --color-dark-bg: #1f2937;
+  --color-slight-dark-bg: #1f293780;
   --color-border: #1f2937;
+  --color-dark-gray: #374151;
   --color-light-gray: #adaebc;
   --color-light-light-gray: #e5e7eb;
+  --color-text: #d1d5db;
   --color-white: #ffffff;
   --color-red: #ff0000;
 
