--- a/frontend/src/components/form/mintnft/styles.scss
+++ b/frontend/src/components/form/mintnft/styles.scss
@@ -33,6 +33,7 @@
             color: var(--color-text);
           }
           .btn {
+            margin-top: 5px;
             .main_btn {
               width: 100%;
               padding: 12px 20px;
