--- a/frontend/src/common/gallery/styles.scss
+++ b/frontend/src/common/gallery/styles.scss
@@ -21,6 +21,8 @@
             img {
               width: 100%;
               height: 100%;
+              max-height: 200px;
+              object-fit: cover;
               border-top-left-radius: 12px;
               border-top-right-radius: 12px;
             }
