--- a/frontend/src/common/gallery/styles.scss
+++ b/frontend/src/common/gallery/styles.scss
@@ -21,7 +21,7 @@
             img {
               width: 100%;
               height: 100%;
-              max-height: 200px;
+              height: 200px;
               object-fit: cover;
               border-top-left-radius: 12px;
               border-top-right-radius: 12px;
